tests/compile_fail/signing_key_clone.stderr
error[E0599]: no method named `clone` found for struct `SigningKey` in the current scope
 --> tests/compile_fail/signing_key_clone.rs:4:21
  |
4 |     let _ = signing.clone();
  |                     ^^^^^ method not found in `SigningKey`
